--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,12 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.0.6
   faker: ^2.0.0
-  flutter_bloc: ^7.0.0
   flutter_launcher_icons: ^0.9.0
   flutter_lints: ^1.0.3
   flutter_test:
     sdk: flutter
   freezed: ^0.14.2
-  get_it: ^7.2.0
+  get: ^4.5.0
   json_serializable: ^4.1.0
   logger: ^1.1.0
 
