--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.1.4
   firebase_auth: ^3.3.0
   firebase_core: ^1.10.2
   firebase_messaging: ^10.0.3
@@ -17,6 +18,7 @@ dependencies:
     sdk: flutter
   get: ^4.5.0
   google_fonts: ^2.0.0
+  uuid: ^3.0.5
 
 dev_dependencies:
   build_runner: ^2.0.6
