--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,14 @@ dependencies:
   firebase_auth: ^3.3.0
   firebase_core: ^1.10.2
   firebase_messaging: ^10.0.3
+  firebase_storage: ^10.2.3
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   get: ^4.5.0
   google_fonts: ^2.0.0
+  image_picker: ^0.8.4+4
   uuid: ^3.0.5
 
 dev_dependencies:
