Adopt feed service implemented. Added app icon.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.petbes">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="petbes"
+        android:label="PetBes"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
