--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   get: ^4.5.0
   google_fonts: ^2.0.0
   image_picker: ^0.8.4+4
+  shared_preferences: ^2.0.11
   uuid: ^3.0.5
 
 dev_dependencies:
